--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-paginate": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
