--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 ## FIREBASE
 
-REACT_APP_API_KEY='xxxxx'
-REACT_APP_AUTH_DOMAIN='xxxxx'
-REACT_APP_PROJECT_ID='xxxxx'
-REACT_APP_STORAGE_BUCKET='xxxxx'
-REACT_APP_MESSAGING_SENDER_ID='xxxxx'
-REACT_APP_APP_ID='xxxxx'
+NEXT_PUBLIC_FIREBASE_API_KEY='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_PROJECT_ID='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_APP_ID='xxxxxxx'
