--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.7.1",
     "next": "latest",
     "next-images": "^1.8.1",
+    "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
