--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "datocms-client": "^3.4.11",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.1",
+    "js-cookie": "^2.2.1",
     "next": "latest",
     "next-images": "^1.8.1",
     "nookies": "^2.5.2",
