--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.7.1",
     "js-cookie": "^2.2.1",
     "next": "latest",
+    "next-auth": "^3.27.3",
     "next-images": "^1.8.1",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
