nextAuth, getServerSideProps,  signin, getInitialProps

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 ## FIREBASE
 
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyAaqTjYCtfnVwH_r1PKS4ixGWgnT55zXEo"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="hellogit-a8b2b.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="hellogit-a8b2b"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="hellogit-a8b2b.appspot.com"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="466613404701"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:466613404701:web:9a387a50ebca3e5c0d32f4"
+NEXT_PUBLIC_FIREBASE_API_KEY='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_PROJECT_ID='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID='xxxxxxx'
+NEXT_PUBLIC_FIREBASE_APP_ID='xxxxxxx'
