--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-## FIREBASE
+## GITHUB OAuth Apps - https://github.com/settings/developers
 
-NEXT_PUBLIC_FIREBASE_API_KEY='xxxxxxx'
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN='xxxxxxx'
-NEXT_PUBLIC_FIREBASE_PROJECT_ID='xxxxxxx'
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET='xxxxxxx'
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID='xxxxxxx'
-NEXT_PUBLIC_FIREBASE_APP_ID='xxxxxxx'
+NEXT_PUBLIC_GITHUB_CLIENT_ID='xxxxxxxx'
+NEXT_PUBLIC_GITHUB_SECRET='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
+
+
